Fix for mail bodies displaying HTML codes - Bug #38555 - r: sspitzer